# Tesla-DVC

./: .gitignore  LICENSE  data.dvc  dvc.yaml  projectflow.txt  pyproject.toml  requirements.txt  temp.py
.dvc/: .gitignore  config
notebooks/: analysis.ipynb
src/: data_ingestion.py  data_preprocessing.py
