[project]
name = "tesla-dvc"
version = "0.1.0"
description = "This is data versioning project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dvc>=3.64.0",
    "dvclive>=3.49.0",
    "fastapi>=0.122.0",
    "mlflow>=3.6.0",
    "pandas>=2.3.3",
    "pytest>=9.0.1",
    "ruff>=0.14.6",
    "scikit-learn>=1.7.2",
    "uv>=0.9.13",
]

keywords = ["MLOps","Data Versioning Control"]

[tool.ruff.lint]
extend-select = [
  "D",   # pydocstyle
]
